--- a/style.scss
+++ b/style.scss
@@ -355,6 +355,14 @@ body {
     width: 100% !important;
 }
 
+.m-8 {
+    margin: 0 .5rem;
+}
+
+.mr-6 {
+    margin-right: .375rem;
+}
+
 /*padding-left*/
 .p-l-56 {
     padding-left: 3.5rem;
