--- a/style.css
+++ b/style.css
@@ -289,29 +289,31 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  padding: 1.5rem;
 }
 .footer-container .footer-second-part .footer-item-contact {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  width: 40%;
+  padding: 1.5rem;
 }
 .footer-container .footer-second-part .footer-contact-list {
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
-  width: 28.563rem;
 }
 .footer-container .footer-second-part .footer-contact-list p {
   color: rgb(156, 163, 175);
   font-size: 0.875rem;
   line-height: 1.375rem;
   cursor: pointer;
+  white-space: nowrap;
 }
 .footer-container .footer-second-part .footer-first-list {
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
+  padding: 1.5rem;
 }
 .footer-container .footer-second-part .footer-first-list h4 {
   font-size: 1.125rem;
@@ -335,6 +337,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
+  padding: 1.5rem;
 }
 .footer-container .footer-second-part .footer-second-list h4 {
   font-size: 1.125rem;
@@ -385,12 +388,40 @@
   height: 0.875rem;
   margin: 0.125rem 0 0 0.25rem;
 }
+.footer-container .footer-last-part .footer-last-info .footer-last-frame .footer-last-name {
+  text-decoration: none;
+}
+.footer-container .footer-last-part .footer-last-info .footer-last-frame .footer-last-name p {
+  font-weight: 500;
+  color: rgb(156, 163, 175);
+}
 
 /*Breakpointy*/
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 767px) {
+  .footer-container {
+    padding: 4rem 1rem;
+  }
+  .footer-item-contact {
+    padding: 1.5rem 0 !important;
+  }
+  .footer-first-list {
+    padding: 1.5rem 0 !important;
+  }
+  .footer-second-list {
+    padding: 1.5rem 0 !important;
+  }
+  .footer-last-info {
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .footer-container {
     padding: 6rem 2rem;
   }
+}
+@media screen and (max-width: 1023px) {
   .footer-content {
     flex-direction: column;
   }
@@ -828,6 +859,14 @@ body {
 
 .w-100 {
   width: 100% !important;
+}
+
+.m-8 {
+  margin: 0 0.5rem;
+}
+
+.mr-6 {
+  margin-right: 0.375rem;
 }
 
 /*padding-left*/
