--- a/style.css
+++ b/style.css
@@ -586,29 +586,87 @@ body {
   max-width: 90rem;
   margin: 0 auto;
 }
-.main-container .main-cards {
-  display: flex;
-  justify-content: center;
-  gap: 1rem;
-  margin: 2.5rem 0 0 0;
-  flex-wrap: wrap;
-}
-.main-container .main-cards .main-cards-div1 {
-  flex-basis: calc(50% - 20px);
-}
-.main-container .main-cards .main-cards-div1 img {
-  width: 100%;
-  border-radius: 0.75rem;
-}
-.main-container .main-cards .main-cards-div2 {
-  flex-basis: calc(50% - 20px);
-}
-.main-container .main-cards .main-cards-div2 img {
-  width: 100%;
-  border-radius: 0.75rem;
-}
 .main-container .main-splide-content {
   margin: 0 0 6rem 0;
+}
+
+.main-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  padding-top: 2.5rem;
+}
+.main-wrapper .main-cards {
+  position: relative;
+  width: 100%;
+}
+.main-wrapper .main-cards .main-card-bg {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(32, 41, 55, 0.7);
+  border-radius: 0.75rem;
+}
+.main-wrapper .main-cards .main-card-img img {
+  display: block;
+  margin: auto;
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 0.75rem;
+}
+.main-wrapper .main-cards .main-logo-img {
+  position: absolute;
+  top: 35%;
+  left: 0;
+  z-index: 4;
+  justify-content: center;
+  display: flex;
+  margin: auto;
+  width: 100%;
+}
+.main-wrapper .main-cards .main-logo-img img {
+  height: 50%;
+  width: 50%;
+}
+.main-wrapper .main-cards .main-content-btn {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(32, 41, 55, 0.95);
+  opacity: 0;
+  transition: opacity 0.6s, transform 0.6s;
+}
+.main-wrapper .main-cards .main-content-btn:hover {
+  opacity: 1;
+}
+.main-wrapper .main-cards .main-content-btn:hover > * {
+  transform: translateY(0);
+}
+.main-wrapper .main-cards .main-content-btn button {
+  position: absolute;
+  bottom: 35%;
+  padding: 16px 32px;
+  border: none;
+  border-radius: 4px;
+  background-color: rgb(249, 115, 22);
+  color: white;
+  cursor: pointer;
+}
+
+.main-content-btn > * {
+  transform: translateY(25px);
+  transition: transform 0.6s;
 }
 
 /*Introductory Section*/
@@ -845,6 +903,7 @@ body {
   display: flex;
   max-width: 90rem;
   margin: 0 auto;
+  gap: 4rem;
 }
 .section-aboutus .container-aboutus .container-info {
   width: 50%;
@@ -995,9 +1054,6 @@ body {
   .section-slider1 {
     display: none;
   }
-  .slider3 {
-    display: none; /*DOCASNE*/
-  }
   /*Introductory Section*/
   .main-information {
     flex-direction: column;
@@ -1042,5 +1098,8 @@ body {
   }
   .feature-app .container-app-img {
     padding-left: 1rem;
+  }
+  .container-aboutus {
+    flex-direction: column;
   }
 }/*# sourceMappingURL=style.css.map */
