--- a/style.scss
+++ b/style.scss
@@ -44,6 +44,7 @@ body {
     align-items: center;
     gap: 1rem;
     padding-top: 2.5rem;
+    padding-bottom: 4rem;
 
     .main-cards {
         position: relative;
@@ -529,6 +530,11 @@ body {
 }
 
 @media screen and (max-width: 767px) {
+    .main-wrapper {
+        padding: 2.5rem 1rem;
+    }
+
+
     .section-application {
         padding: 4rem 1rem;
     }
@@ -539,12 +545,22 @@ body {
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
+    .main-wrapper {
+        padding: 2.5rem 2rem;
+    }
+
     .section-application {
         padding: 6rem 2rem;
     }
 }
 
 @media screen and (max-width: 1023px) {
+    .main-wrapper {
+        flex-direction: column;
+    }
+
+
+
     .main-information {
         padding: 6rem 2rem !important;
         width: 100%;
@@ -644,4 +660,14 @@ body {
         flex-direction: column;
     }
     
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1920px) {
+    .main-wrapper {
+        padding: 2.5rem 3rem;
+    }
+
+    .section-slider {
+        padding: 0 3rem;
+    }
 }
