--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 .main-splide-content {
   max-width: 90rem;
   margin: 0 auto;
+  width: 100%;
 }
 
 .section-slider1 {
@@ -90,8 +91,24 @@
   padding: 20px;
 }
 
+@media screen and (min-width: 1280px) {
+  .section-slider {
+    padding: 0 3rem;
+  }
+  .section-slider1 {
+    padding: 4rem 3rem 2.5rem 3rem;
+  }
+}
 @media screen and (max-width: 1279px) {
   .section-slider {
+    display: none;
+  }
+  .section-slider1 {
+    display: none;
+  }
+}
+@media screen and (max-width: 1920px) {
+  .slider3 {
     display: none;
   }
 }
@@ -603,6 +620,7 @@ body {
 }
 .main-container .main-splide-content {
   margin: 0 0 6rem 0;
+  width: 100%;
 }
 
 .main-wrapper {
@@ -1040,16 +1058,58 @@ body {
   .main-wrapper {
     padding: 2.5rem 1rem;
   }
+  .main-information {
+    padding: 2rem 1rem !important;
+  }
+  .main-information .elektro-features {
+    max-width: 100% !important;
+  }
+  .section-cards {
+    padding: 2rem 1rem;
+  }
+  .section-services {
+    padding: 2rem 1rem;
+  }
+  .section-items {
+    padding: 2rem 1rem;
+  }
+  .section-example {
+    padding: 2rem 1rem;
+  }
+  .section-aboutus {
+    padding: 2rem 1rem;
+  }
   .section-application {
-    padding: 4rem 1rem;
+    padding: 2rem 1rem;
   }
   .container-app {
-    padding: 4rem 1rem;
+    padding: 2rem 1rem;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .main-wrapper {
     padding: 2.5rem 2rem;
+  }
+  .main-information {
+    padding: 2.5rem 2rem !important;
+  }
+  .main-information .elektro-features {
+    max-width: 100% !important;
+  }
+  .section-cards {
+    padding: 6rem 2rem;
+  }
+  .section-services {
+    padding: 6rem 2rem;
+  }
+  .section-items {
+    padding: 6rem 2rem;
+  }
+  .section-example {
+    padding: 6rem 2rem;
+  }
+  .section-aboutus {
+    padding: 6rem 2rem;
   }
   .section-application {
     padding: 6rem 2rem;
@@ -1058,10 +1118,6 @@ body {
 @media screen and (max-width: 1023px) {
   .main-wrapper {
     flex-direction: column;
-  }
-  .main-information {
-    padding: 6rem 2rem !important;
-    width: 100%;
   }
   .elektro-features {
     width: 100%;
@@ -1083,12 +1139,6 @@ body {
   .main-information {
     flex-direction: column;
   }
-  .section-cards {
-    padding: 6rem 2rem;
-  }
-  .section-services {
-    padding: 6rem 2rem;
-  }
   .services-items {
     flex-direction: column;
   }
@@ -1101,15 +1151,6 @@ body {
   }
   .services-items-reverse {
     flex-direction: column-reverse;
-  }
-  .section-items {
-    padding: 6rem 2rem;
-  }
-  .section-example {
-    padding: 6rem 2rem;
-  }
-  .section-aboutus {
-    padding: 6rem 2rem;
   }
   .section-aboutus .container-info {
     width: 100% !important;
@@ -1128,11 +1169,29 @@ body {
     flex-direction: column;
   }
 }
-@media screen and (min-width: 1024px) and (max-width: 1920px) {
+@media screen and (min-width: 1024px) {
   .main-wrapper {
     padding: 2.5rem 3rem;
   }
-  .section-slider {
-    padding: 0 3rem;
+  .main-information {
+    padding: 2rem 3rem !important;
+  }
+  .main-information .elektro-features {
+    max-width: 100% !important;
+  }
+  .section-cards {
+    padding: 6rem 3rem;
+  }
+  .section-services {
+    padding: 6rem 3rem;
+  }
+  .section-items {
+    padding: 6rem 3rem;
+  }
+  .section-example {
+    padding: 6rem 3rem;
+  }
+  .section-aboutus {
+    padding: 6rem 3rem;
   }
 }/*# sourceMappingURL=style.css.map */
