--- a/style.scss
+++ b/style.scss
@@ -143,6 +143,7 @@ body {
         align-items: center;
         gap: 4rem;
         padding: 40px 112px 40px 112px;
+        width: 100%;
 
         .elektro-features {
             max-width: 34.688rem;
