--- a/components/_footer.scss
+++ b/components/_footer.scss
@@ -188,7 +188,7 @@
             gap: 0.75rem;
             padding: 1.5rem;
     
-            h4 {
+            p {
                 @include text-large;
                 color: $text-inverse;
                 font-weight: 500;
@@ -214,7 +214,7 @@
             gap: 0.75rem;
             padding: 1.5rem;
     
-            h4 {
+            p {
                 @include text-large;
                 color: $text-inverse;
                 font-weight: 500;
