--- a/style.css
+++ b/style.css
@@ -372,7 +372,7 @@
   gap: 0.75rem;
   padding: 1.5rem;
 }
-.footer-container .footer-second-part .footer-first-list h4 {
+.footer-container .footer-second-part .footer-first-list p {
   font-size: 1.125rem;
   line-height: 1.625rem;
   color: rgb(255, 255, 255);
@@ -396,7 +396,7 @@
   gap: 0.75rem;
   padding: 1.5rem;
 }
-.footer-container .footer-second-part .footer-second-list h4 {
+.footer-container .footer-second-part .footer-second-list p {
   font-size: 1.125rem;
   line-height: 1.625rem;
   color: rgb(255, 255, 255);
@@ -1082,6 +1082,22 @@ body {
   }
 }
 @media screen and (max-width: 767px) {
+  h1 {
+    font-size: 2rem !important;
+    line-height: 2.5rem !important;
+  }
+  h2 {
+    font-size: 1.5rem !important;
+    line-height: 2rem !important;
+  }
+  h4 {
+    font-size: 1.25rem !important;
+    line-height: 1.5rem !important;
+  }
+  h5 {
+    font-size: 1rem !important;
+    line-height: 1.25rem !important;
+  }
   .main-wrapper {
     padding: 2.5rem 1rem;
   }
@@ -1148,9 +1164,6 @@ body {
   }
   .elektro-features {
     width: 100%;
-  }
-  .elektro-features h1 {
-    font-size: 1.5rem !important;
   }
   .main-cards {
     flex-direction: column;
