--- a/components/_slider.scss
+++ b/components/_slider.scss
@@ -73,17 +73,40 @@
 .slider3 {
     display: flex;
     justify-content: flex-end; /* Zarovná slidy na pravou stranu */
+
+    .splide3-human img{
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+        border-radius: .5rem .5rem 0 0;
+    }
 }
 
-.slider3 img {
-    height: 280px;
-    width: 100%;
-    object-fit: cover; 
-}
 
 .slide-caption {
-    background-color: green;
-    padding: 20px;
+    background-color: $text-secondary;
+    padding: 1.5rem 1rem 1.25rem 1.25rem;
+    border-radius: 0 0 0.5rem 0.5rem;
+
+    .splide-info-job {
+        color: $brand-color;
+        @include text-small;
+        font-weight: 400;
+        margin-bottom: .25rem;
+    }
+
+    h4 {
+        color: $text-inverse;
+        font-weight: 600;
+        @include h4;
+        margin-bottom: .25rem;
+    }
+
+    p {
+        color: $text-quad;
+        @include text-small;
+        font-weight: 400;
+    }
 }
 
 
