--- a/partials/_mixins.scss
+++ b/partials/_mixins.scss
@@ -50,4 +50,6 @@
     border-radius: 0.25rem;
     border: 1px solid rgba(209, 213, 219, 1);
     background-color: $text-inverse;
+    box-shadow: 0px 1px 2px 0px rgba(241, 241, 241, 1);
+
 }
