--- a/style.css
+++ b/style.css
@@ -387,6 +387,9 @@
   cursor: pointer;
   white-space: nowrap;
 }
+.footer-container .footer-second-part .footer-contact-list p:hover, .footer-container .footer-second-part .footer-contact-list p:focus, .footer-container .footer-second-part .footer-contact-list p:active {
+  color: rgb(255, 255, 255);
+}
 .footer-container .footer-second-part .footer-first-list {
   display: flex;
   flex-direction: column;
@@ -405,11 +408,11 @@
   gap: 0.25rem;
   list-style-type: none;
 }
-.footer-container .footer-second-part .footer-first-list ul a {
-  text-decoration: none;
+.footer-container .footer-second-part .footer-first-list ul li p {
   font-size: 0.875rem;
   line-height: 1.375rem;
   color: rgb(156, 163, 175);
+  font-weight: 400;
 }
 .footer-container .footer-second-part .footer-second-list {
   display: flex;
@@ -434,6 +437,9 @@
   font-size: 0.875rem;
   line-height: 1.375rem;
   color: rgb(156, 163, 175);
+}
+.footer-container .footer-second-part .footer-second-list ul a:hover, .footer-container .footer-second-part .footer-second-list ul a:focus, .footer-container .footer-second-part .footer-second-list ul a:active {
+  color: rgb(255, 255, 255);
 }
 .footer-container .footer-last-part {
   width: 100%;
