--- a/components/_footer.scss
+++ b/components/_footer.scss
@@ -106,9 +106,6 @@
                 position: relative;
                 padding: 0.5rem 0 0 0;
             
-            
-                
-        
                 input, textarea {
                     width: 100%;
                     padding: 0.625rem;
@@ -117,8 +114,14 @@
                     border: none;
                     border-radius: 0.25rem;
                     color: $text-inverse;
+
+                    &:focus,
+                    &:active,
+                    &:hover {
+                        border: 2px solid rgba(209, 213, 219, 1);
+                        outline: none;
+                    }
                 }
-        
                 
                 ::placeholder {
                     color: $text-tertiary;
@@ -152,6 +155,16 @@
                 padding: 1rem 2rem;
                 width: 100%;
                 cursor: pointer;
+
+                &:hover {
+                    background-color: $brand-color-dark;
+                }
+
+                &:focus,
+                &:active {
+                    border: 1px solid rgba(70, 143, 254, 1);
+                    box-shadow: 0px 0px 0px 3px rgba(70, 143, 254, 1);
+                }
             }
         }
 
