--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -8,6 +8,7 @@ $text-tertiary: rgba(107, 114, 128, 1);
 $color-ondark: rgba(55, 65, 81, 1);
 $dark-bg: rgba(32, 41, 55, 1);
 $brand-color: rgba(249, 115, 22, 1);
+$brand-color-dark:rgba(249, 115, 22, 0.8);
 $brand-light: rgba(234, 237, 241, 1);
 $brand-border: rgba(209, 213, 219, 1);
 $brand-border-light: rgba(209, 213, 219, 0.2);
