--- a/components/_header.scss
+++ b/components/_header.scss
@@ -77,7 +77,8 @@
                     cursor: pointer;
 
                     &:focus,
-                    &:active {
+                    &:active,
+                    &.is-active {
                         border: 1px solid rgba(70, 143, 254, 1);
                         box-shadow: 0px 0px 0px 3px rgba(70, 143, 254, 1);
                         background-color: $text-inverse;
