--- a/style.css
+++ b/style.css
@@ -611,7 +611,7 @@
   line-height: 1.5rem;
   cursor: pointer;
 }
-.header-container .header-wrapper .header-list .dropdown .select:focus, .header-container .header-wrapper .header-list .dropdown .select:active {
+.header-container .header-wrapper .header-list .dropdown .select:focus, .header-container .header-wrapper .header-list .dropdown .select:active, .header-container .header-wrapper .header-list .dropdown .select.is-active {
   border: 1px solid rgb(70, 143, 254);
   box-shadow: 0px 0px 0px 3px rgb(70, 143, 254);
   background-color: rgb(255, 255, 255);
